--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #333;
-  background-color: whitesmoke;
+  background-color: rgb(3, 9, 43);
 }
 
 button:hover {
