--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -2,7 +2,6 @@
     margin-top: auto;
     position: relative;
     bottom: 0;
-    background-color: rgb(0, 0, 139, .9);
     width: 100%;
     padding: 0rem .5rem .5rem;
 }
@@ -10,7 +9,7 @@
 .footer {
     display: flex;
     gap: 1.5rem;
-    padding: 1rem;
+    padding: .5rem;
     display: flex;
     color: white
 }
