--- a/src/Components/forum/Forum.css
+++ b/src/Components/forum/Forum.css
@@ -119,10 +119,10 @@
     gap: .25rem;
     padding: .5rem;
     border: 2px solid #1115;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.423);
     border-radius: 5px;
     box-shadow: 2px 2px 2px #3333;
-
+    color: white;
 }
 
 .postBtnContainer,
